--- a/_config.yml
+++ b/_config.yml
@@ -65,25 +65,25 @@ author:
     - label: "JYACS"
       icon: "fas fa-fw fa-link"
       url: "https://jyacs.qzz.io"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "贴吧"
+      icon: "fab fa-fw fa-link"
+      url: "https://tieba.baidu.com/home/main?id=tb.1.d07df80c.a8EiNjQtA7cwWgVEwH0bmQ?t=1672895272&fr=index"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/Panghu1102"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
+    - label: "小红书"
+      icon: "fab fa-fw fa-link"
       url: "https://instagram.com/"
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "贴吧"
+      icon: "fab fa-fw fa-link"
+      url: "https://tieba.baidu.com/home/main?id=tb.1.d07df80c.a8EiNjQtA7cwWgVEwH0bmQ?t=1672895272&fr=index"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
+      url: "https://github.com/Panghu1102"
+    - label: "小红书"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/"
 
