--- a/_config.yml
+++ b/_config.yml
@@ -66,25 +66,25 @@ author:
       icon: "fas fa-fw fa-link"
       url: "https://jyacs.qzz.io"
     - label: "贴吧"
-      icon: "fab fa-fw fa-link"
+      icon: "fas fa-fw fa-link"
       url: "https://tieba.baidu.com/home/main?id=tb.1.d07df80c.a8EiNjQtA7cwWgVEwH0bmQ?t=1672895272&fr=index"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/Panghu1102"
     - label: "小红书"
-      icon: "fab fa-fw fa-link"
+      icon: "fas fa-fw fa-link"
       url: "https://instagram.com/"
 
 footer:
   links:
     - label: "贴吧"
-      icon: "fab fa-fw fa-link"
+      icon: "fas fa-fw fa-link"
       url: "https://tieba.baidu.com/home/main?id=tb.1.d07df80c.a8EiNjQtA7cwWgVEwH0bmQ?t=1672895272&fr=index"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/Panghu1102"
     - label: "小红书"
-      icon: "fab fa-fw fa-instagram"
+      icon: "fas fa-fw fa-link"
       url: "https://instagram.com/"
 
 defaults:
