--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ author:
       url: "https://github.com/Panghu1102"
     - label: "小红书"
       icon: "fas fa-fw fa-link"
-      url: "https://instagram.com/"
+      url: "https://www.xiaohongshu.com/user/profile/63e64f0f000000002600784a?xsec_token=YB6tdTc5ICPxK5P8K8xUDP23T4nMYVDrRfpsPeKC7M9cI=&xsec_source=app_share&xhsshare=CopyLink&shareRedId=ODlHNjdLNE82NzUyOTgwNjg5OTc7PTpK&apptime=1768901345&share_id=4c7bca359d9a42339cb1e4ce78d53c60"
 
 footer:
   links:
@@ -85,7 +85,7 @@ footer:
       url: "https://github.com/Panghu1102"
     - label: "小红书"
       icon: "fas fa-fw fa-link"
-      url: "https://instagram.com/"
+      url: "https://www.xiaohongshu.com/user/profile/63e64f0f000000002600784a?xsec_token=YB6tdTc5ICPxK5P8K8xUDP23T4nMYVDrRfpsPeKC7M9cI=&xsec_source=app_share&xhsshare=CopyLink&shareRedId=ODlHNjdLNE82NzUyOTgwNjg5OTc7PTpK&apptime=1768901345&share_id=4c7bca359d9a42339cb1e4ce78d53c60"
 
 defaults:
   # _posts
