--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,9 @@
 title: Panghu1102,a developer|Welcome！
 email: Ph101102@163.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+  Panghu1102的博客！欢迎访问！
+twitter_username: Panghu1102
+github_username: Panghu1102
 minimal_mistakes_skin: default
 search: true
 
